Remove a lot of the dampened opacity. Change document links to CLIENT ACCESS. Make services modals more uniform.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
       <div class="title contact-us-link">CONTACT</div>
     </div>
     <div class="column">
-      <div class="title "><a href="https://ws.onehub.com/" target="_blank">DOCUMENTS</a></div>
+      <div class="title "><a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a></div>
     </div>
 
     <!-- <div class="column social">
