--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -37,7 +37,7 @@
                 <li><a href="listings.html">LISTINGS</a></li>
                 <li><a href="experience.html">EXPERIENCE</a></li>
                 <li><a class="active" href="about.html">ABOUT</a></li>
-                <li><a href="https://ws.onehub.com/" target="_blank">DOCUMENTS</a</li>
+                <li><a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a</li>
                 <li><a class="contact-us-link">CONTACT</a></li>
               </ul>
             </div>
