--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -31,7 +31,7 @@
           <li><a href="listings.html">LISTINGS</a></li>
           <li><a class="active" href="experience.html">EXPERIENCE</a></li>
           <li><a href="about.html">ABOUT</a></li>
-          <li><a href="https://ws.onehub.com/" target="_blank">DOCUMENTS</a</li>
+          <li><a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a</li>
           <li><a class="contact-us-link">CONTACT</a></li>
         </ul>
       </div>
@@ -45,7 +45,7 @@
           <div class="text">
             <h4>{{page.text_title}}</h4>
             <p>{{page.text_body}}</p>
-              <button class="contact-us-link">CONTACT US</button>
+              <button class="contact-us-link-top contact-us-link">CONTACT US</button>
           </div>
         </div>
         <div class="bottom">
