--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -36,7 +36,7 @@
           <div class="services-modal-content content-tenant">
             <div class="service-detail-close"></div>
             <div class="header">
-              <h1>Tenant Representation</h1>
+              <h1>TENANT REPRESENTATION</h1>
             </div>
             <div class="content content-tenant">
               <p>{{page.tenant_services_text}}<p>
@@ -49,7 +49,7 @@
           <div class="services-modal-content content-landlord">
             <div class="service-detail-close"></div>
             <div class="header">
-              <h1>Landlord Representation</h1>
+              <h1>LANDLORD REPRESENTATION</h1>
             </div>
             <div class="content content-landlord">
               <p>{{page.landlord_services_text}}<p>
@@ -62,7 +62,7 @@
           <div class="services-modal-content content-investments">
             <div class="service-detail-close"></div>
             <div class="header">
-              <h1>Investment Sales</h1>
+              <h1>INVESTMENT SALES</h1>
             </div>
             <div class="content content-investment">
               <p>{{page.investment_services_text}}<p>
@@ -75,7 +75,7 @@
           <li><a href="listings.html">LISTINGS</a></li>
           <li><a href="experience.html">EXPERIENCE</a></li>
           <li><a href="about.html">ABOUT</a</li>
-          <li><a href="https://ws.onehub.com/" target="_blank">DOCUMENTS</a</li>
+            <li><a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a</li>
           <li><a class="contact-us-link">CONTACT</a></li>
         </ul>
       </div>
@@ -89,7 +89,7 @@
             <li><a href="listings.html">LISTINGS</a></li>
             <li><a href="experience.html">EXPERIENCE</a></li>
             <li><a href="about.html">ABOUT</a></li>
-            <li><a href="https://ws.onehub.com/" target="_blank">DOCUMENTS</a</li>
+            <li><a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a</li>
             <li><a class="contact-us-link">CONTACT</a></li>
           </ul>
         </div>
