Remove a lot of opacity overriding. New avatars for testimonials. Otras cosas tambien.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -95,7 +95,7 @@
                 <img class="image-left" src="images/about/hero.jpg" />
               </div>
               <div class="description">
-                <div class="title head-title">ABOUT GROUNDSOURCE</div>
+                <div class="title head-title">ABOUT <span>GROUND</span>SOURCE</div>
                 <p class="about-main-text">
                   {{page.main_text}}
                 </p>
