--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -43,7 +43,7 @@
           <img src="images/logo.png" class="logo-upper-left"/>
           <div class="ham-menu"></div>
           <div class="text">
-            <h4>{{page.text_title}}</h4>
+            <div class="experience-section-header">{{page.text_title}}</div>
             <p>{{page.text_body}}</p>
               <button class="contact-us-link-top contact-us-link">CONTACT US</button>
           </div>
