--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -1,3 +1,7 @@
+@mixin header {
+  font-size: 1.8em;
+  letter-spacing: .5;
+}
 @mixin hamburger-menu {
   background-color: white;
   background-image: url(../images/ham-menu.png);
