Redo agent flexbox and modals.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -53,10 +53,10 @@
                 <div class="contact">
                   <img src="{{agent.avatar}}" class="bio-pic-mobile"/>
                   <h4>{{agent.first_name}} {{agent.last_name}}</h4>
-                  <p class="no-margin">{{agent.position}}</p>
+                  <p class="no-margin position">{{agent.position}}</p>
                   <br />
-                  <p class="no-margin"><a href="mailto:{{agent.email}}">{{agent.email}}</a></p>
-                  <p class="no-margin">M: {{agent.phone}}</p>
+                  <p class="no-margin email secondary-contact"><a href="mailto:{{agent.email}}">{{agent.email}}</a></p>
+                  <p class="no-margin secondary-contact">M: {{agent.phone}}</p>
                   <a href="mailto:{{agent.email}}"><button class="rounded-red-button">work with {{agent.first_name}}</buton></a>
                 </div>
               </div>
