--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -28,7 +28,7 @@
 
   .rounded-red-button {
     border-radius: 500px;
-    margin-top: 13px;
+    margin-top: 22px;
     font-weight: 500;
     font-size: .7em;
     color: $primary-color-darker-darker;
@@ -61,7 +61,7 @@
       position: relative;
       max-width: 1400px;
       background-color: white;
-      width: 50vw;
+      width: 65vw;
       margin: 10vh auto 0 auto;
       font-size: 1.2em;
       .header {
@@ -70,18 +70,33 @@
         .bio-pic {
           position: absolute;
           left: -10px;
-          height: 127px;
+          height: 267px;
         }
         .contact {
-          margin-left: 36%;
+          margin-left: 33%;
           display: inline-block;
+          h4 {
+            padding-top: 16px;
+            font-weight: bold;
+          }
           a {
             text-decoration: none;
+          }
+          .position {
+            color: $primary-color;
+          }
+          .email {
+            padding-top: 69px;
+          }
+          .secondary-contact {
+            font-size: .7em;
+            font-weight: bold;
           }
           > p {
             margin-top: 0;
             margin-bottom: 0;
             text-transform: uppercase;
+            font-size: .85em;
             > a {
               text-decoration: underline;
             }
@@ -96,9 +111,8 @@
         }
       }
       .bio {
-        margin: 0 25px;
+        margin: 0 31px;
         padding-bottom: 12px;
-        padding-top: 1px;
         color: black;
         opacity: .55;
         line-height: 110%;
@@ -107,7 +121,8 @@
           font-size: 1.8em;
           opacity: 1;
           text-transform: uppercase;
-          margin-top: 8px;
+          margin-bottom: 25px;
+          margin-top: 0;
         }
       }
       .footer {
@@ -198,14 +213,18 @@
     }
   }
   .agent {
-    position: relative;
+    width: 23%;
     text-align: center;
     margin: .3em;
     box-shadow: 0px 0px 2em gainsboro;
-    width: 23%;
-    padding-bottom: 19px;
     border: 1px solid #c7c7c7;
+    .agent-info-bottom {
+      margin-top: auto;
+      padding-bottom: 4px;
+      padding-top: 4px;
+    }
     .bio-image {
+      font-size: 1.4em;
       position: relative;
       > img {
         width: 100%;
@@ -223,14 +242,15 @@
       margin: 1em 1em;
       padding: 28px 0 12px 0;
       text-align: left;
-      font-size: .95em;
+      font-size: .85em;
+      height: 90px;
     }
 
     .bio-button {
       display: inline-block;
       color: $primary-color;
       border: 1px solid $primary-color;
-      font-size: .95em;
+      font-size: .9em;
       padding: 0.4em 1em;
       border-radius: 500px;
       margin-bottom: 1em;
