--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -4,7 +4,6 @@
   }
 }
 #container-about {
-  color: #b0b0b0;
   margin: 0 auto;
   #header-about {
     margin-top: -3%;
@@ -187,6 +186,8 @@
     text-align: left;
     vertical-align: middle;
     align-self: center;
+    color: #858585;
+    letter-spacing: .5px;
 
     > p {
       padding-top: 15px;
