Fix top nav buttons not displaying correctly in Safari. Don't use scroll reveal if browser is IE 9.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -205,13 +205,15 @@
           $("#header-text").css("opacity", 1);
         }, 700);
 
-        window.sr = ScrollReveal();
-        sr.reveal(".home-intro-left");
-        sr.reveal(".home-intro-right");
-        sr.reveal(".services-header");
-        sr.reveal(".review-slideshow");
-        sr.reveal(".services-text");
-        sr.reveal("#contact-us-home-section");
+        if (compatibleBrowser()) {
+          window.sr = ScrollReveal();
+          sr.reveal(".home-intro-left");
+          sr.reveal(".home-intro-right");
+          sr.reveal(".services-header");
+          sr.reveal(".review-slideshow");
+          sr.reveal(".services-text");
+          sr.reveal("#contact-us-home-section");
+        }
 
         $('.review-carousel').slick({
           "autoplay": false,
