--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -283,7 +283,7 @@ a {
     list-style-type: none;
     margin: 30px 30px 0 0;
     > li {
-      display: inline;
+      display: inline-block;
       font-size: 1.2em;
       padding: 8px;
       > a {
