--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -3,9 +3,12 @@
     <div class="contact-close"></div>
     <form id="gform" class="form" method="POST">
       <p class="contact-us">CONTACT US</p>
+      <label class="contact-labels" for="name">Name</label>
       <input name="name" type="text" placeholder="Name">
+      <label class="contact-labels" for="email">Email</label>
       <input name="email" type="text" placeholder="Email">
       <div id="email-invalid" class="validation">Please use a valid email address</div>
+      <label class="contact-labels" for="phone">Phone</label>
       <input name="phone" type="text" placeholder="Phone Number">
       <button id="submit-contact-form">SUBMIT</button>
     </form>
