--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -138,6 +138,7 @@
           width: 100%;
           height: 100%;
           margin: 0 auto;
+          -js-display: flex;
           display: flex;
           justify-content: center;
           .agent-featured-listing {
@@ -159,6 +160,7 @@
   }
 
   .about-text {
+    -js-display: flex;
     display: flex;
     justify-content: space-between;
     padding: 5em 60px;
@@ -433,6 +435,7 @@
             width: 100%;
             height: 100%;
             margin: 0;
+            -js-display: flex;
             display: flex;
             flex-direction: row;
             flex-flow: row wrap;
