--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -171,6 +171,7 @@ a {
   text-align: center;
   margin: 0 auto;
   .contact-row {
+    -js-display: flex;
     display: flex;
     flex-direction: row;
     flex-flow: row wrap;
@@ -412,6 +413,11 @@ a {
     font-size: .8em;
   }
 }
+
+.contact-labels {
+  display: none;
+}
+
 .contact-us-modal {
   @include modal;
   .contact-close {
@@ -651,6 +657,7 @@ a {
 }
 
 .flexbox {
+  -js-display: flex;
   display: flex;
   position: relative;
   flex-direction: row;
@@ -661,6 +668,7 @@ a {
 }
 
 .flexbox-full {
+  -js-display: flex;
   display: flex;
   flex-direction: row;
   flex-flow: row wrap;
@@ -721,6 +729,7 @@ a {
 
 .navigation-arrow-left {
   transform: rotate(135deg);
+  -ms-transform: rotate(135deg);
   left: 8%;
   &:hover {
     // transform: rotate(135deg) scale(1.3);
@@ -741,6 +750,7 @@ a {
 
 .navigation-arrow-right {
   transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
   right: 8%;
   &:hover {
     animation-name: navigation-arrow-right;
@@ -812,6 +822,7 @@ a {
 }
 
 .services-row {
+  -js-display: flex;
   display: flex;
   align-items: stretch;
 }
