--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -732,10 +732,10 @@ a {
   -ms-transform: rotate(135deg);
   left: 8%;
   &:hover {
-    // transform: rotate(135deg) scale(1.3);
-    animation-name: navigation-arrow-left;
-    animation-duration: .5s;
-    animation-fill-mode: forwards;
+    transform: rotate(135deg) scale(1.3);
+    // animation-name: navigation-arrow-left;
+    // animation-duration: .5s;
+    // animation-fill-mode: forwards;
   }
 }
 
@@ -753,9 +753,10 @@ a {
   -ms-transform: rotate(-45deg);
   right: 8%;
   &:hover {
-    animation-name: navigation-arrow-right;
-    animation-duration: .5s;
-    animation-fill-mode: forwards;
+    transform: rotate(-45deg) scale(1.3);
+    // animation-name: navigation-arrow-right;
+    // animation-duration: .5s;
+    // animation-fill-mode: forwards;
   }
 }
 
@@ -779,24 +780,31 @@ a {
     max-width: 1200px;
     margin: 0 auto;
   }
-  p {
-    max-width: calc(100% - 200px - 120px); // 200px img, 60px*2 padding
-    padding: 12px;
-    text-align: left;
-    display: inline-block;
-    strong {
-      text-transform: uppercase;
+  .review {
+    padding-top: 33px;
+    p {
+      max-width: calc(100% - 200px - 120px); // 200px img, 60px*2 padding
+      vertical-align: middle;
+      // font-size: calc(4vw + 4vh + 2vmin);
+      font-size: .5em;
+      padding: 12px;
+      text-align: left;
+      display: inline-block;
+      // font-size: .5em;
+      strong {
+        text-transform: uppercase;
+      }
     }
-  }
-  img {
-    display: inline-block;
-    margin-top: -4%;
-    z-index: 25;
-    width: 100px;
-    border-style: solid;
-    border-radius: 500px;
-    border-color: white;
-    box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
+    img {
+      display: inline-block;
+      margin-top: -4%;
+      z-index: 25;
+      width: 100px;
+      border-style: solid;
+      border-radius: 500px;
+      border-color: white;
+      box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
+    }
   }
 }
 
