Fix bug where print preview images failed to appear.

--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -18,13 +18,13 @@
         <div class="listing-name">{{page.name}}</div>
           <div class="gallery">
             {% if page.gallery-images[0] %}
-              <img src="{{ page.gallery-images[0] }}" class="img-responsive listing-image"/>
+              <img src="{{ page.gallery-images[0] }}" class="listing-image"/>
             {% endif %}
             {% if page.gallery-images[1] %}
-              <img src="{{ page.gallery-images[1] }}" class="img-responsive listing-image"/>
+              <img src="{{ page.gallery-images[1] }}" class="listing-image"/>
             {% endif %}
             {% if page.gallery-images[2] %}
-              <img src="{{ page.gallery-images[2] }}" class="img-responsive listing-image"/>
+              <img src="{{ page.gallery-images[2] }}" class="listing-image"/>
             {% endif %}
           </div>
         </div>
