Fix issue with footer on listings page.

--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -147,7 +147,7 @@
                           </td>
                           <td>
                             <img src="images/icons/car.svg" />
-                            <span>{{listing.parking}} Parking</span>
+                            <span>{{listing.parking}} Spots</span>
                           </td>
                         </tr>
                       </table>
@@ -169,8 +169,8 @@
             </div>
           </div>
         </div>
+        {% include footer.html %}
       </div>
-      {% include footer.html %}
     </div>
       {% include include-scripts.html %}
       <script type="text/javascript">
