--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -121,7 +121,7 @@
             <div class="carousel-container">
               <div class="review-carousel">
                 {% for testimonial in site.testimonials %}
-                  <div class="review">
+                  <div class="review slick-center">
                     <div class="inner-review">
                     <img src="{{ testimonial.userImg }}" />
                     <p>
