--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -156,7 +156,7 @@
                       <div id="about-google-map"></div>
                     {% endif %}
 
-                    {% if page.floorplan-image %}
+                    {% if page.floorplan-image != "" and page.floorplan-image != null %}
                       <h2 class="title">FLOORPLAN</h2>
                       <img src="{{ page.floorplan-image }}" class="img-responsive" />
                     {% endif %}
