--- a/_sass/listings.scss
+++ b/_sass/listings.scss
@@ -1,6 +1,6 @@
 #container-listings {
   .footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -27,6 +27,7 @@
 
   .content {
     padding-top: 12vh;
+    min-height: 82vh;
   }
   .header {
     text-align: center;
@@ -146,9 +147,16 @@
     background-color: $brand-blue;
   }
 
+  .wrapped-text {
+    display: inline-block;
+    padding-left: 30px;
+    text-indent: -30px;
+    vertical-align: top;
+  }
   .listing-preview {
     position: relative;
     width: 31%;
+    min-width: 240px;
     margin: 0 18px 18px 0;
     margin-bottom: 36px;
     color: gray;
@@ -196,6 +204,7 @@
           > tbody {
             > tr {
               > td {
+                width: 135px;
                 padding: 6px;
               }
             }
@@ -261,7 +270,7 @@
     position: relative;
     font-size: .9em;
     color: #959595;
-    margin: 14px 0 35px 0;
+    margin: -15px 0 23px 0;
     > div {
       display: inline-block;
       padding: 3px;
