Use the white GS logo for the listing page.

--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -85,7 +85,7 @@
       </div>
       <div class="main">
         <div id="container-listing" class="container-fluid">
-          <img src="/images/logo.png" class="logo-upper-left"/>
+          <img src="/images/home-logo.png" class="logo-upper-left"/>
           {% if page.property-header %}
             <div id="header-listings" class="background-header" style="background-image:url({{page.property-header}})"></div>
           {% else %}
