--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -286,8 +286,10 @@ a {
   top: 0;
   right: 0;
   z-index: 3;
+  white-space: nowrap;
   > ul {
     list-style-type: none;
+    white-space: nowrap;
     margin: 30px 30px 0 0;
     > li {
       display: inline-block;
@@ -982,7 +984,7 @@ a {
   overflow: hidden;
 }
 
-@media screen and (max-height: 650px) {
+@media screen and (max-height: 700px) {
   .service-detail {
     width: 100% !important;
     height: 100% !important;
