Fix header links.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -74,8 +74,8 @@
         <ul>
           <li><a href="listings.html">LISTINGS</a></li>
           <li><a href="experience.html">EXPERIENCE</a></li>
-          <li><a href="about.html">ABOUT</a</li>
-            <li><a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a</li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a></li>
           <li><a class="contact-us-link">CONTACT</a></li>
         </ul>
       </div>
@@ -121,7 +121,7 @@
             <div class="carousel-container">
               <div class="review-carousel">
                 {% for testimonial in site.testimonials %}
-                  <div class="review slick-center">
+                  <div class="review">
                     <div class="inner-review">
                     <img src="{{ testimonial.userImg }}" />
                     <p>
