--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -40,7 +40,7 @@
             <li><a class="active" href="listings.html">LISTINGS</a></li>
             <li><a href="experience.html">EXPERIENCE</a></li>
             <li><a href="about.html">ABOUT</a></li>
-            <li><a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a</li>
+            <li><a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a></li>
             <li><a class="contact-us-link">CONTACT</a></li>
           </ul>
         </div>
