Only set a fixed height for contact-us modal.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -428,6 +428,10 @@ a {
 
 .contact-us-modal {
   @include modal;
+  .inner {
+    overflow: scroll;
+    height: 60%;
+  }
   .contact-close {
     @include close-button;
     position: absolute;
