--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -124,7 +124,7 @@
       top: 0%;
       width: 94vw;
       height: 100%;
-      padding: 40px 20px;
+      padding: 80px 20px 40px 20px;
     }
     .study-carousel {
       width: 100vw;
