Make agent details close button like the contact-close button.

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -54,6 +54,13 @@
     display: none;
   }
 
+  .close-agent-detail {
+    @include close-button;
+    position: absolute;
+    color: $primary-color;
+    cursor: pointer;
+    padding: 21px;
+  }
   .agent-details {
     @include modal;
     .content {
